--- a/style.css
+++ b/style.css
@@ -118,6 +118,21 @@ button:hover
     color: rgb(130, 116, 116);
 }
 
+.btnChangeStatus
+{
+    background: none;
+    color: white;
+    font-weight: 300;
+    font-size: 16px;
+    text-decoration: underline;
+}
+
+.btnChangeStatus:hover
+{
+    box-shadow: 0 0 0 transparent;
+    font-weight: 600;
+}
+
 dialog
 {
     border-radius: 15px;
